crates/normalize-cfg/tests/snapshots/lua_cfg__lua_linear.snap
---
source: crates/normalize-cfg/tests/lua_cfg.rs
assertion_line: 99
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
